--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Infinity-Box</title>
+    <title>Infinity Box</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
     <link href="css/fontawesome-free/css/all.min.css" rel="stylesheet">
@@ -32,7 +32,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Infinity Box</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Infinity Box Logo</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
@@ -58,7 +58,7 @@
         <div class="row h-100">
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
-              <h1 class="mb-5">Infinity Box will help you explore the anatomical details of a frog.</h1>
+              <h1 class="mb-5">Infinity Box will help you explore the possibilities.</h1>
               <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Download Now for Free</a>
             </div>
           </div>
