edit device on homepage

--- a/index.html
+++ b/index.html
@@ -58,13 +58,14 @@
         <div class="row h-100">
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
-              <h1 class="mb-5">Infinity Box will help you explore the possibilities.</h1>
+              <h1 class="mb-5">Infinity Box. </h1>
+                <h3>Explore the possibilities.</h3><br><br>
               <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Download Now for Free</a>
             </div>
           </div>
           <div class="col-lg-5 my-auto">
             <div class="device-container">
-              <div class="device-mockup iphone6_plus portrait white">
+              <div class="device-mockup ipad_pro portrait white">
                 <div class="device">
                   <div class="screen">
                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
