edit masthead font size, color

--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
         <div class="row h-100">
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
-              <h1 class="mb-5">Infinity Box. </h1>
-                <h3>Explore the possibilities.</h3><br><br>
+              <h1 class="mb-5">Infinity Box</h1>
+                <h3 class='tagline'>Explore the possibilities.</h3><br><br>
               <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Download Now for Free</a>
             </div>
           </div>
           <div class="col-lg-5 my-auto">
             <div class="device-container">
-              <div class="device-mockup ipad_pro portrait white">
+              <div class="device-mockup iphone6_plus portrait white">
                 <div class="device">
                   <div class="screen">
                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
@@ -127,7 +127,7 @@
                   <div class="feature-item">
                     <i class="icon-screen-smartphone text-primary"></i>
                     <h3>Device Mockups</h3>
-                    <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
+                    <p class="text-muted">Ready to use! No tools required!</p>
                   </div>
                 </div>
                 <div class="col-lg-6">
@@ -143,14 +143,14 @@
                   <div class="feature-item">
                     <i class="icon-present text-primary"></i>
                     <h3>Free to Use</h3>
-                    <p class="text-muted">As always, this theme is free to download and use for any purpose!</p>
+                    <p class="text-muted">As always, this app is free to download and use for any purpose!</p>
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div class="feature-item">
                     <i class="icon-lock-open text-primary"></i>
                     <h3>Open Source</h3>
-                    <p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>
+                    <p class="text-muted">you can use it commercially!</p>
                   </div>
                 </div>
               </div>
@@ -170,32 +170,9 @@
       <div class="overlay"></div>
     </section>
 
-    <section class="contact bg-primary" id="contact">
-      <div class="container">
-        <h2>Connect with Us!</h2>
-        <ul class="list-inline list-social">
-          <li class="list-inline-item social-twitter">
-            <a href="#">
-              <i class="fab fa-twitter"></i>
-            </a>
-          </li>
-          <li class="list-inline-item social-facebook">
-            <a href="#">
-              <i class="fab fa-facebook-f"></i>
-            </a>
-          </li>
-          <li class="list-inline-item social-google-plus">
-            <a href="#">
-              <i class="fab fa-google-plus-g"></i>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </section>
-
     <footer>
       <div class="container">
-        <p>Made with <i class="fas fa-heart"> by Stephanie Cherubin and Jasmine Anderson</i></p>
+        <p>Made with <i class="fas fa-heart"></i> by Stephanie Cherubin and Jasmine Anderson</p>
       </div>
     </footer>
 
@@ -205,9 +182,6 @@
 
     <!-- Plugin JavaScript -->
     <script src="css/jquery-easing/jquery.easing.min.js"></script>
-
-    <!-- Custom scripts for this template -->
-    <script src="js/new-age.min.js"></script>
 
   </body>
 
