--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Infinity Box Logo</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">
+          <img src="img/Infinity-box-3.png" alt="open box with colored sides" height="50">
+        </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
@@ -65,7 +67,7 @@
           </div>
           <div class="col-lg-5 my-auto">
             <div class="device-container">
-              <div class="device-mockup iphone6_plus portrait white">
+              <div class="device-mockup ipad_pro portrait gold">
                 <div class="device">
                   <div class="screen">
                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
@@ -126,8 +128,9 @@
                 <div class="col-lg-6">
                   <div class="feature-item">
                     <i class="icon-screen-smartphone text-primary"></i>
-                    <h3>Device Mockups</h3>
+                    <h3>Any Platform</h3>
                     <p class="text-muted">Ready to use! No tools required!</p>
+                    <p class="text-muted">For use on your iPhone or Android phone or tablet</p>
                   </div>
                 </div>
                 <div class="col-lg-6">
@@ -160,7 +163,7 @@
       </div>
     </section>
 
-    <section class="cta">
+    <section class="cont">
       <div class="cta-content">
         <div class="container">
           <h2>Stop <br>waiting.<br>Start exploring.</h2>
