update css index and logo

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <a class="nav-link js-scroll-trigger" href="#features">Features</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+              <a class="nav-link js-scroll-trigger" href="#explore">Explore</a>
             </li>
           </ul>
         </div>
@@ -60,14 +60,14 @@
         <div class="row h-100">
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
-              <h1 class="mb-5">Infinity Box</h1>
-                <h3 class='tagline'>Explore the possibilities.</h3><br><br>
-              <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Download Now for Free</a>
+              <h1 class="tagline">Infinity Box</h1>
+                <h3 class='tagline'>Explore what's around you <br> in a brand new way!</h3><br>
+              <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">See For Yourself!</a></a>
             </div>
           </div>
           <div class="col-lg-5 my-auto">
             <div class="device-container">
-              <div class="device-mockup ipad_pro portrait gold">
+              <div class="device-mockup ipad_pro portrait silver">
                 <div class="device">
                   <div class="screen">
                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
@@ -89,7 +89,7 @@
         <div class="row">
           <div class="col-md-8 mx-auto">
             <h2 class="section-heading">Discover what all the buzz is about!</h2>
-            <p>Our app is available on any mobile device! <br>Download now to get started!</p>
+            <p>Infinity Box is available on any mobile device! <br>Download now to get started!</p>
             <div class="badges">
               <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
               <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
@@ -163,15 +163,40 @@
       </div>
     </section>
 
-    <section class="cont">
+    <section class="cta" id="explore">
       <div class="cta-content">
         <div class="container">
-          <h2>Stop <br>waiting.<br>Start exploring.</h2>
-          <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Let's Get Started!</a>
+          <h3>Explore <br>the <br> possibilities.</h3><br><br>
+          <a href="#explore" class="btn btn-outline btn-xl js-scroll-trigger">Download for Free!</a>
         </div>
       </div>
       <div class="overlay"></div>
     </section>
+
+    <!-- <section class="contact bg-primary" id="contact">
+      <div class="container">
+        <h2>We
+          <i class="fas fa-heart"></i>
+          new friends!</h2>
+        <ul class="list-inline list-social">
+          <li class="list-inline-item social-twitter">
+            <a href="#">
+              <i class="fab fa-twitter"></i>
+            </a>
+          </li>
+          <li class="list-inline-item social-facebook">
+            <a href="#">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+          </li>
+          <li class="list-inline-item social-google-plus">
+            <a href="#">
+              <i class="fab fa-google-plus-g"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section> -->
 
     <footer>
       <div class="container">
