update tagline copy

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
               <h1 class="tagline">Infinity Box</h1>
-                <h3 class='tagline'>Explore what's around you <br> in a brand new way!</h3><br>
+                <h3 class='tagline'>Learning done <br> in a brand new way!</h3><br>
               <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">See For Yourself!</a></a>
             </div>
           </div>
@@ -166,7 +166,7 @@
     <section class="cta" id="explore">
       <div class="cta-content">
         <div class="container">
-          <h3>Explore <br>the <br> possibilities.</h3><br><br>
+          <h3>Explore <br>what's <br> around you.</h3><br><br>
           <a href="#explore" class="btn btn-outline btn-xl js-scroll-trigger">Download for Free!</a>
         </div>
       </div>
